--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^3.12.1
   cloud_firestore: ^5.6.5
   go_router: ^14.8.1
+  google_sign_in: ^6.2.2
+  line_icons: ^2.0.3
 
 dev_dependencies:
   flutter_test:
