--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   go_router: ^14.8.1
   google_sign_in: ^6.2.2
   line_icons: ^2.0.3
+  shimmer: ^3.0.0
+  google_nav_bar: ^5.0.7
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
