--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shimmer: ^3.0.0
   google_nav_bar: ^5.0.7
   flutter_colorpicker: ^1.1.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
