--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,8 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   intl: ^0.20.2
   table_calendar: ^3.2.0
-
+  shared_preferences: ^2.5.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
