--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   intl: ^0.20.2
   table_calendar: ^3.2.0
   shared_preferences: ^2.5.2
+  fl_chart: ^0.70.2
   
 dev_dependencies:
   flutter_test:
