--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   table_calendar: ^3.2.0
   shared_preferences: ^2.5.2
   fl_chart: ^0.70.2
+  http: ^1.1.0
   
 dev_dependencies:
   flutter_test:
