--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   shared_preferences: ^2.5.2
   fl_chart: ^0.70.2
   http: ^1.1.0
+  responsive_framework: ^1.5.1
   
 dev_dependencies:
   flutter_test:
