--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   fl_chart: ^0.70.2
   http: ^1.1.0
   responsive_framework: ^1.5.1
+  logger: ^2.5.0
   
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,11 @@ dev_dependencies:
   build_runner: ^2.4.15
   custom_lint: ^0.7.5
   riverpod_lint: ^2.6.5
+  mockito: ^5.4.5
+  fake_cloud_firestore: ^3.1.0
+  firebase_auth_mocks: ^0.14.1
+  firebase_core_platform_interface: ^5.4.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
