Update .gitignore to include additional platform-specific and Firebase-related files

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ migrate_working_dir/
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-#.vscode/
+.vscode/
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -31,7 +31,38 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
+build/
+pubspec.lock
+
+# Firebase
+**/android/**/google-services.json
+**/ios/**/GoogleService-Info.plist
+**/firebase_options.dart
+**/firebase_app_id_file.json
+**/firebase-service-account.json
+
+# IDE
+.idea/
+.vscode/
+*.iml
+*.iws
+.DS_Store
+
+# Platform-specific
+**/ios/Flutter/.last_build_id
+**/ios/Pods/
+**/ios/.symlinks/
+**/ios/Flutter/ephemeral/
+**/android/.gradle
+**/android/captures/
+**/android/local.properties
+**/android/key.properties
+**/macos/Flutter/ephemeral/
+**/windows/flutter/ephemeral/
+
+# Test/Coverage
+coverage/
+*.lcov
 
 # Symbolication related
 app.*.symbols
